--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,5 @@ dependencies {
         exclude group: 'com.android.support'
     }
 
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
 }
