--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,10 +46,13 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.android.support:design:25.0.1'
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:recyclerview-v7:25.0.+'
 
     compile "com.squareup.retrofit2:retrofit:${retrofitVersion}"
     compile "com.squareup.retrofit2:adapter-rxjava:${retrofitVersion}"
     compile "com.squareup.retrofit2:converter-gson:${retrofitVersion}"
+
+    compile 'com.squareup.okhttp3:logging-interceptor:3.3.0'
 
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex:rxjava:1.1.6'
@@ -57,5 +60,4 @@ dependencies {
         exclude group: 'com.android.support'
     }
 
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
 }
